--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@ limitations under the License.
 
     <button onclick="fetchMessage()">Fetch Message</button>
     <p id="message">Click on the button to fetch the message.</p>
+
+    <!--
+	2. dodatkow zmiany w branchu master
+	   123 456
+	   789
+    -->
 </body>
 
 </html>
