--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@ limitations under the License.
     ###########################################
 
     <button onclick="fetchMessage()">Fetch Message</button>
-    <p id="message">Click on the button to fetch the message.</p>
+    <p id="message">Click on the button to go to home.</p>
+	
+	######################
+	###  ALA ma kota   ###
+	######################
+	
+	
 </body>
 
 </html>
