--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ limitations under the License.
 <html>
 
 <head>
-    <title>Hello, world</title>
+    <title>Hello, world - BEFORE STASH for draft</title>
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js"></script>
 </head>
