Inicial commit to new branch - piterbranch

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ limitations under the License.
 	###  ALA ma kota   ###
 	######################
 	
-	
+	<h2>To jest piter branch</h2>
 </body>
 
 </html>
